Fix color contrast

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@
 #header {
     text-align: center;
     color: #f3f3f3;
-    background-color: #0471f4;
+    background-color: #0000ff;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -36,7 +36,7 @@
 
 #footer {
     color: #f3f3f3;
-    background-color: #0471f4;
+    background-color: #0000ff;
     padding-top: .3em;
     padding-bottom: .3em;
     text-align: center;
